node-ports/beer/beer-clusterIP-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: beer-service
spec: 
  selector: 
    app: beer
  ports: 
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
