node-ports/beer/beer-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: beer-service
spec: 
  type: NodePort
  selector: 
    app: beer
  ports: 
    - port: 8085
      targetPort: 80
      nodePort: 30006
