node-ports/beer/beer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beer-ingress
spec:
  rules:
  - host: beer.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: beer-service
            port:
              number: 8085
